--- a/cofh_core/lang/zh_tw.json
+++ b/cofh_core/lang/zh_tw.json
@@ -3,8 +3,8 @@
   "attribute.name.cofh.hazard_resistance": "毒害抗性",
   "attribute.name.cofh.sting_resistance": "叮咬抗性",
   "forge.swimSpeed": "遊泳速度",
-  "commands.cofh.heal.success.single": "已治愈%s",
-  "commands.cofh.heal.success.multiple": "已治愈%s個實體",
+  "commands.cofh.heal.success.single": "已治癒%s",
+  "commands.cofh.heal.success.multiple": "已治癒%s個實體",
   "commands.cofh.ignite.success.single": "已點燃%s",
   "commands.cofh.ignite.success.multiple": "已點燃%s個實體",
   "commands.cofh.invis.remove.single": "已移除%s的隱身效果",
@@ -15,15 +15,15 @@
   "commands.cofh.invuln.remove.multiple": "已移除%s個實體的無敵效果",
   "commands.cofh.invuln.success.single": "已將%s設為無敵",
   "commands.cofh.invuln.success.multiple": "已將%s個實體設為無敵",
-  "commands.cofh.repair.success.single": "已修覆%s的盔甲",
-  "commands.cofh.repair.success.multiple": "已修覆%s個實體的盔甲",
+  "commands.cofh.repair.success.single": "已修復%s的盔甲",
+  "commands.cofh.repair.success.multiple": "已修復%s個實體的盔甲",
   "commands.cofh.zap.success.single": "已向%s降下天譴",
   "commands.cofh.zap.success.multiple": "已向%s個實體降下天譴",
   "info.cofh.amount": "數量",
   "info.cofh.area": "區域",
   "info.cofh.arrows": "箭矢",
-  "info.cofh.chance": "幾率",
-  "info.cofh.chance_additional": "額外幾率",
+  "info.cofh.chance": "機率",
+  "info.cofh.chance_additional": "額外機率",
   "info.cofh.click_to_claim": "§e§o點擊§r§7以獲取。",
   "info.cofh.click_to_clear": "§e§oAlt+Shift並點擊§r§7以清除。",
   "info.cofh.effects": "效果",
@@ -92,7 +92,7 @@
   "info.cofh.high": "高",
   "info.cofh.low": "低",
   "info.cofh.signal_required": "需要紅石信號",
-  "block.cofh_core.glossed_magma": "潛匿巖漿",
+  "block.cofh_core.glossed_magma": "潛匿岩漿",
   "effect.cofh_core.amplification": "增幅",
   "effect.cofh_core.chilled": "凍僵",
   "effect.cofh_core.clarity": "洞察",
@@ -122,27 +122,27 @@
   "info.cofh_core.item_filter.1": "可使用額外選項來精確調整行為。",
   "key.cofh.mode_change_increment": "循環至下一個模式",
   "key.cofh.mode_change_decrement": "循環至上一個模式",
-  "enchantment.minecraft.aqua_affinity.desc": "在水下時的采掘速度不受影響。",
+  "enchantment.minecraft.aqua_affinity.desc": "在水下時的採掘速度不受影響。",
   "enchantment.minecraft.bane_of_arthropods.desc": "提升對節肢生物的傷害並減緩其移動速度。",
   "enchantment.minecraft.binding_curse.desc": "阻止帶有該附魔的物品被卸下。",
   "enchantment.minecraft.blast_protection.desc": "降低爆炸所造成的傷害。",
   "enchantment.minecraft.channeling.desc": "在特定條件下，擲出的三叉戟會召喚一道雷電轟擊著陸點。",
   "enchantment.minecraft.depth_strider.desc": "提升水下移動速度。",
-  "enchantment.minecraft.efficiency.desc": "提升采掘速度。",
+  "enchantment.minecraft.efficiency.desc": "提升採掘速度。",
   "enchantment.minecraft.feather_falling.desc": "降低摔落所造成的傷害。",
   "enchantment.minecraft.fire_aspect.desc": "點燃目標。",
   "enchantment.minecraft.fire_protection.desc": "降低火焰造成的傷害。",
   "enchantment.minecraft.flame.desc": "箭矢會點燃所命中的目標。",
-  "enchantment.minecraft.fortune.desc": "提升特定方塊被采掘後掉落的物品數量。",
+  "enchantment.minecraft.fortune.desc": "提升特定方塊被採掘後掉落的物品數量。",
   "enchantment.minecraft.frost_walker.desc": "凍結腳下的水，以便穿過水域。",
   "enchantment.minecraft.impaling.desc": "提升對水生生物的傷害。",
   "enchantment.minecraft.infinity.desc": "普通的箭永不會被消耗。",
   "enchantment.minecraft.knockback.desc": "強化近戰攻擊的擊退效果。",
   "enchantment.minecraft.looting.desc": "提升生物掉落物數量。",
   "enchantment.minecraft.loyalty.desc": "三叉戟會折返使用者手中。",
-  "enchantment.minecraft.luck_of_the_sea.desc": "提升高品質垂釣戰利品的出現幾率。",
+  "enchantment.minecraft.luck_of_the_sea.desc": "提升高品質垂釣戰利品的出現機率。",
   "enchantment.minecraft.lure.desc": "縮短垂釣戰利品上鉤的耗時。",
-  "enchantment.minecraft.mending.desc": "賦予帶有該附魔的物品以消耗經驗值修覆自身的能力。",
+  "enchantment.minecraft.mending.desc": "賦予帶有該附魔的物品以消耗經驗值修復自身的能力。",
   "enchantment.minecraft.multishot.desc": "三支箭矢會呈平面扇形射出，但每次射擊僅消耗一支箭。",
   "enchantment.minecraft.piercing.desc": "箭矢會射穿多個實體。",
   "enchantment.minecraft.power.desc": "提升箭矢傷害。",
@@ -153,11 +153,11 @@
   "enchantment.minecraft.respiration.desc": "延長水下呼吸時間。",
   "enchantment.minecraft.riptide.desc": "擲出的三叉戟會在特定條件下搭載持握者一同移動。",
   "enchantment.minecraft.sharpness.desc": "提升攻擊傷害。",
-  "enchantment.minecraft.silk_touch.desc": "被采掘的方塊會精確地掉落其自身。",
-  "enchantment.minecraft.smite.desc": "提升對亡靈生物的傷害。",
+  "enchantment.minecraft.silk_touch.desc": "被採掘的方塊會精確地掉落其自身。",
+  "enchantment.minecraft.smite.desc": "提升對不死生物的傷害。",
   "enchantment.minecraft.sweeping.desc": "提升橫掃攻擊造成的傷害。",
   "enchantment.minecraft.thorns.desc": "對攻擊者造成傷害。",
-  "enchantment.minecraft.unbreaking.desc": "降低耐久損耗幾率。",
+  "enchantment.minecraft.unbreaking.desc": "降低耐久損耗機率。",
   "enchantment.minecraft.vanishing_curse.desc": "帶有該魔咒的物品會在使用者死亡後徹底消失。",
   "item.minecraft.lingering_potion.effect.amplification": "滯留型增幅藥水",
   "item.minecraft.lingering_potion.effect.clarity": "滯留型洞察藥水",
