--- a/coldenchants/lang/zh_tw.json
+++ b/coldenchants/lang/zh_tw.json
@@ -23,7 +23,7 @@
   "enchantment.coldenchants.water_breathing": "水下呼吸",
   "enchantment.coldenchants.radiance": "煥生",
   "enchantment.coldenchants.vampiric": "吸血",
-  "enchantment.coldenchants.phantom": "幻翼同族",
+  "enchantment.coldenchants.phantom": "夜魅同族",
   "enchantment.coldenchants.elder_protection": "遠古庇佑",
   "enchantment.coldenchants.berserker": "狂暴戰士",
   "enchantment.coldenchants.slimy": "黏稠",
