--- a/coldenchants2/lang/zh_tw.json
+++ b/coldenchants2/lang/zh_tw.json
@@ -25,8 +25,8 @@
   "enchantment.coldenchants2.nether_bane": "地獄殺手",
   "enchantment.coldenchants2.blinding": "障目",
   "enchantment.coldenchants2.botanist": "植物學家",
-  "enchantment.coldenchants2.bounding": "沖躍",
-  "enchantment.coldenchants2.butchering": "屠肉",
+  "enchantment.coldenchants2.bounding": "衝躍",
+  "enchantment.coldenchants2.butchering": "屠夫",
   "enchantment.coldenchants2.cleave": "劈砍",
   "enchantment.coldenchants2.counter": "回擊",
   "enchantment.coldenchants2.crit": "重擊",
@@ -42,11 +42,11 @@
   "enchantment.coldenchants2.frostfire": "霜焰",
   "enchantment.coldenchants2.golden_bite": "舌尖黃金",
   "enchantment.coldenchants2.gravity": "重力",
-  "enchantment.coldenchants2.healing": "療愈",
+  "enchantment.coldenchants2.healing": "療癒",
   "enchantment.coldenchants2.levitate": "升空",
   "enchantment.coldenchants2.lifestealing": "吸血",
   "enchantment.coldenchants2.momentum": "迸進",
-  "enchantment.coldenchants2.nether_run": "下界神行",
+  "enchantment.coldenchants2.nether_run": "地獄神行",
   "enchantment.coldenchants2.nourish": "榮養",
   "enchantment.coldenchants2.poseidons_call": "海神之召",
   "enchantment.coldenchants2.reinforced": "堅固",
@@ -62,7 +62,7 @@
   "enchantment.coldenchants2.weighted": "沈重",
   "enchantment.coldenchants2.wisdom": "智慧",
   "enchantment.coldenchants2.wisp_caller": "招魂引魄",
-  "enchantment.coldenchants2.wither": "雕零",
+  "enchantment.coldenchants2.wither": "凋零",
   "enchantment.coldenchants2.yoyo": "悠悠球",
   "enchantment.coldenchants2.summoner": "受召之助",
   "enchantment.coldenchants2.poison_cloud": "毒霧",
@@ -70,7 +70,7 @@
   "enchantment.coldenchants2.juggernaut": "無畏戰士",
   "enchantment.coldenchants2.water_breathing": "水下呼吸",
   "enchantment.coldenchants2.radiance": "煥生",
-  "enchantment.coldenchants2.phantom": "幻翼同族",
+  "enchantment.coldenchants2.phantom": "夜魅同族",
   "enchantment.coldenchants2.elder_protection": "遠古庇佑",
   "enchantment.coldenchants2.berserker": "狂暴戰士",
   "enchantment.coldenchants2.slimy": "黏稠",
@@ -82,61 +82,61 @@
   "enchantment.coldenchants2.chopper": "伐木",
   "block.coldenchants2.lit_air": "發光空氣",
   "block.coldenchants2.temp_sand": "流沙",
-  "enchantment.coldenchants2.nether_bane.desc": "提升對下界生物造成的傷害。",
+  "enchantment.coldenchants2.nether_bane.desc": "提升對地獄生物造成的傷害。",
   "enchantment.coldenchants2.blinding.desc": "對攻擊目標施加失明與緩慢效果。",
-  "enchantment.coldenchants2.botanist.desc": "沖刺時催生腳下的作物。",
-  "enchantment.coldenchants2.bounding.desc": "使穿戴者能夠施展沖刺跳！",
+  "enchantment.coldenchants2.botanist.desc": "衝刺時催生腳下的作物。",
+  "enchantment.coldenchants2.bounding.desc": "使穿戴者能夠施展衝刺跳！",
   "enchantment.coldenchants2.butchering.desc": "使被擊殺的動物掉落更多肉。",
   "enchantment.coldenchants2.cleave.desc": "攻擊目標周圍的生物將受到波及並被擊退。",
-  "enchantment.coldenchants2.counter.desc": "有一定幾率在受到攻擊後回擊其來源。",
-  "enchantment.coldenchants2.crit.desc": "普通攻擊有一定幾率造成暴擊傷害。",
+  "enchantment.coldenchants2.counter.desc": "有一定機率在受到攻擊後回擊其來源。",
+  "enchantment.coldenchants2.crit.desc": "普通攻擊有一定機率造成暴擊傷害。",
   "enchantment.coldenchants2.ender_pull.desc": "投擲終界珍珠並擊中目標後會將其拉向你。",
   "enchantment.coldenchants2.ender_throw.desc": "右擊可擲出終界珍珠。",
   "enchantment.coldenchants2.escape_artist.desc": "潛行右擊可將自身傳送至上方的表面。",
   "enchantment.coldenchants2.fireball.desc": "右擊可擲出火球，點燃擊中的目標。",
   "enchantment.coldenchants2.firebrand.desc": "對著火的目標造成額外傷害。",
   "enchantment.coldenchants2.float.desc": "使攻擊目標在短時間內向上漂浮。",
-  "enchantment.coldenchants2.flurry.desc": "攻擊時有幾率獲得急迫效果。",
+  "enchantment.coldenchants2.flurry.desc": "攻擊時有機率獲得急迫效果。",
   "enchantment.coldenchants2.freeze.desc": "對攻擊目標施加緩慢效果與冰凍傷害。",
   "enchantment.coldenchants2.frostball.desc": "右擊可擲出火球，對擊中的目標施加緩慢效果並造成傷害。",
   "enchantment.coldenchants2.frostfire.desc": "右擊可擲出霜焰，點燃擊中的目標並對其施加緩慢效果。",
   "enchantment.coldenchants2.golden_bite.desc": "右擊可從你的黃金武器上咬下一口",
   "enchantment.coldenchants2.gravity.desc": "攻擊目標周圍的生物將受到波及並被拉向彼此。",
-  "enchantment.coldenchants2.healing.desc": "攻擊時有幾率恢覆自身生命值。",
+  "enchantment.coldenchants2.healing.desc": "攻擊時有機率恢復自身生命值。",
   "enchantment.coldenchants2.levitate.desc": "右擊可對自身施加漂浮效果。",
-  "enchantment.coldenchants2.lifestealing.desc": "攻擊時有幾率吸取攻擊目標的生命值用以治療自身。",
+  "enchantment.coldenchants2.lifestealing.desc": "攻擊時有機率吸取攻擊目標的生命值用以治療自身。",
   "enchantment.coldenchants2.momentum.desc": "攻擊時短暫提升自身移動速度。",
-  "enchantment.coldenchants2.nether_run.desc": "身處下界時提升自身移動速度。",
-  "enchantment.coldenchants2.nourish.desc": "攻擊時有幾率恢覆自身饑餓值。",
+  "enchantment.coldenchants2.nether_run.desc": "身處地獄時提升自身移動速度。",
+  "enchantment.coldenchants2.nourish.desc": "攻擊時有機率恢復自身饑餓值。",
   "enchantment.coldenchants2.poseidons_call.desc": "右擊時給予自身海豚的恩惠效果。",
   "enchantment.coldenchants2.reinforced.desc": "物品耐久度將不會低於 1。（未完成）",
-  "enchantment.coldenchants2.renew.desc": "緩慢恢覆物品耐久度。",
+  "enchantment.coldenchants2.renew.desc": "緩慢恢復物品耐久度。",
   "enchantment.coldenchants2.sand_wall.desc": "右擊丟出流沙，可用以建起一片臨時障礙物！",
-  "enchantment.coldenchants2.scavenger.desc": "破壞草將有幾率獲得綠寶石。",
-  "enchantment.coldenchants2.steal.desc": "攻擊人形目標時有幾率獲得綠寶石。 ",
+  "enchantment.coldenchants2.scavenger.desc": "破壞草將有機率獲得綠寶石。",
+  "enchantment.coldenchants2.steal.desc": "攻擊人形目標時有機率獲得綠寶石。 ",
   "enchantment.coldenchants2.strength.desc": "滿生命值時對目標造成額外傷害。",
   "enchantment.coldenchants2.torchbringer.desc": "在低亮度環境下攻擊時自動在腳下放置火把。",
-  "enchantment.coldenchants2.venom.desc": "攻擊時有幾率對目標施加中毒效果。",
+  "enchantment.coldenchants2.venom.desc": "攻擊時有機率對目標施加中毒效果。",
   "enchantment.coldenchants2.wanderer.desc": "右擊以傳送至隨機位置，潛行右擊以傳送回重生點！",
-  "enchantment.coldenchants2.warding.desc": "受到攻擊時有幾率獲得傷害吸收生命值。",
+  "enchantment.coldenchants2.warding.desc": "受到攻擊時有機率獲得傷害吸收生命值。",
   "enchantment.coldenchants2.weighted.desc": "對攻擊目標施加更強的擊退效果！",
-  "enchantment.coldenchants2.wisdom.desc": "攻擊時有幾率給予額外經驗值。",
-  "enchantment.coldenchants2.wisp_caller.desc": "每次攻擊均有幾率召喚出遊魂助你戰鬥。",
-  "enchantment.coldenchants2.wither.desc": "對攻擊目標施加雕零效果。",
+  "enchantment.coldenchants2.wisdom.desc": "攻擊時有機率給予額外經驗值。",
+  "enchantment.coldenchants2.wisp_caller.desc": "每次攻擊均有機率召喚出遊魂助你戰鬥。",
+  "enchantment.coldenchants2.wither.desc": "對攻擊目標施加凋零效果。",
   "enchantment.coldenchants2.yoyo.desc": "短時間內獲得移動速度加成，該效果結束後自身將被傳送回效果開始時所處的位置。",
-  "enchantment.coldenchants2.summoner.desc": "每次攻擊均有幾率召喚出受召者助你戰鬥。",
-  "enchantment.coldenchants2.poison_cloud.desc": "每次攻擊均有幾率在周圍生成毒霧。",
+  "enchantment.coldenchants2.summoner.desc": "每次攻擊均有機率召喚出受召者助你戰鬥。",
+  "enchantment.coldenchants2.poison_cloud.desc": "每次攻擊均有機率在周圍生成毒霧。",
   "enchantment.coldenchants2.cat_paw.desc": "使苦力怕逃離穿戴者。",
-  "enchantment.coldenchants2.juggernaut.desc": "沖刺時使沿途的方塊被破壞並掉落。",
+  "enchantment.coldenchants2.juggernaut.desc": "衝刺時使沿途的方塊被破壞並掉落。",
   "enchantment.coldenchants2.water_breathing.desc": "為穿戴者提供水下呼吸的能力。",
-  "enchantment.coldenchants2.radiance.desc": "每次攻擊均有幾率在周圍生成有治療效果的煥生雲霧。",
-  "enchantment.coldenchants2.phantom.desc": "使穿戴者免受幻翼的襲擊。",
+  "enchantment.coldenchants2.radiance.desc": "每次攻擊均有機率在周圍生成有治療效果的煥生雲霧。",
+  "enchantment.coldenchants2.phantom.desc": "使穿戴者免受夜魅的襲擊。",
   "enchantment.coldenchants2.elder_protection.desc": "使穿戴者對守衛者造成額外的傷害並免受挖掘疲勞效果。",
   "enchantment.coldenchants2.berserker.desc": "附於皮革盔甲時提升穿戴者的攻擊傷害。",
-  "enchantment.coldenchants2.slimy.desc": "附於頭盔時使穿戴者能夠黏著在方塊的底面；附於胸甲時使穿戴者能夠沿墻滑下；附於護腿時能夠抵消穿戴者所受的摔落傷害；附於靴子時提升穿戴者的跳躍高度。",
+  "enchantment.coldenchants2.slimy.desc": "附於頭盔時使穿戴者能夠黏著在方塊的底面；附於胸甲時使穿戴者能夠沿牆滑下；附於護腿時能夠抵消穿戴者所受的摔落傷害；附於靴子時提升穿戴者的跳躍高度。",
   "enchantment.coldenchants2.death_wish.desc": "低生命值時提升攻擊傷害。",
   "enchantment.coldenchants2.hearthing.desc": "手持指南針並右擊以記錄當前位置，再次右擊以傳送至該位置。",
-  "enchantment.coldenchants2.smithing.desc": "吸取經驗值可修覆耐久度，效率大大高於【經驗修補】。",
+  "enchantment.coldenchants2.smithing.desc": "吸取經驗值可修復耐久度，效率大大高於【經驗修補】。",
   "enchantment.coldenchants2.restful.desc": "睡眠後給予穿戴者短時間的正面效果。",
   "enchantment.coldenchants2.night_vision.desc": "使穿戴者獲得夜視能力。",
   "enchantment.coldenchants2.chopper.desc": "在非潛行狀態下可一次性伐倒整棵樹木。"
