--- a/coldsblockbank/lang/zh_tw.json
+++ b/coldsblockbank/lang/zh_tw.json
@@ -8,7 +8,7 @@
   "item.coldsblockbank.gold_bank": "金錠囤積盒",
   "item.coldsblockbank.iron_bank": "鐵錠囤積盒",
   "item.coldsblockbank.coal_bank": "煤炭囤積盒",
-  "item.coldsblockbank.cobblestone_bank": "圓石囤積盒",
+  "item.coldsblockbank.cobblestone_bank": "鵝卵石囤積盒",
   "item.coldsblockbank.dirt_bank": "泥土囤積盒",
   "item.coldsblockbank.sand_bank": "沙子囤積盒",
   "item.coldsblockbank.glass_bank": "玻璃囤積盒",
@@ -24,7 +24,7 @@
   "item.coldsblockbank.oak_bank": "橡木原木囤積盒",
   "item.coldsblockbank.dark_oak_bank": "黑橡木原木囤積盒",
   "item.coldsblockbank.spruce_bank": "杉木原木囤積盒",
-  "item.coldsblockbank.birch_bank": "白樺原木囤積盒",
+  "item.coldsblockbank.birch_bank": "樺木原木囤積盒",
   "item.coldsblockbank.jungle_bank": "叢林原木囤積盒",
   "item.coldsblockbank.acacia_bank": "相思木原木囤積盒",
   "item.coldsblockbank.warped_bank": "扭曲蕈柄囤積盒",
@@ -37,9 +37,9 @@
   "item.coldsblockbank.apple_bank": "蘋果囤積盒",
   "item.coldsblockbank.baked_potato_bank": "馬鈴薯囤積盒",
   "item.coldsblockbank.beetroot_bank": "甜菜囤積盒",
-  "item.coldsblockbank.bread_bank": "面包囤積盒",
-  "item.coldsblockbank.carrot_bank": "胡蘿卜囤積盒",
-  "item.coldsblockbank.chorus_fruit_bank": "紫頌果囤積盒",
+  "item.coldsblockbank.bread_bank": "麵包囤積盒",
+  "item.coldsblockbank.carrot_bank": "胡蘿蔔囤積盒",
+  "item.coldsblockbank.chorus_fruit_bank": "歌萊果囤積盒",
   "item.coldsblockbank.cooked_chicken_bank": "熟雞肉囤積盒",
   "item.coldsblockbank.cooked_cod_bank": "熟鱈魚囤積盒",
   "item.coldsblockbank.cooked_mutton_bank": "熟羊肉囤積盒",
@@ -50,22 +50,22 @@
   "item.coldsblockbank.melon_bank": "西瓜片囤積盒",
   "item.coldsblockbank.steak_bank": "牛排囤積盒",
   "item.coldsblockbank.sweet_berry_bank": "甜漿果囤積盒",
-  "item.coldsblockbank.ender_pearl_bank": "末影珍珠囤積盒",
+  "item.coldsblockbank.ender_pearl_bank": "終界珍珠囤積盒",
   "item.coldsblockbank.egg_bank": "雞蛋囤積盒",
   "item.coldsblockbank.feather_bank": "羽毛囤積盒",
   "item.coldsblockbank.leather_bank": "皮革囤積盒",
   "item.coldsblockbank.bamboo_bank": "竹子囤積盒",
   "item.coldsblockbank.kelp_bank": "海帶囤積盒",
   "item.coldsblockbank.sugar_cane_bank": "甘蔗囤積盒",
-  "item.coldsblockbank.slime_bank": "黏液球囤積盒",
+  "item.coldsblockbank.slime_bank": "史萊姆球囤積盒",
   "item.coldsblockbank.snowball_bank": "雪球囤積盒",
   "item.coldsblockbank.cobweb_bank": "蜘蛛網囤積盒",
-  "item.coldsblockbank.prismarine_bank": "海晶石囤積盒",
-  "item.coldsblockbank.prismarine_brick_bank": "海晶石磚囤積盒",
-  "item.coldsblockbank.dark_prismarine_bank": "暗海晶石囤積盒",
-  "item.coldsblockbank.prismarine_shard_bank": "海晶碎片囤積盒",
-  "item.coldsblockbank.prismarine_crystal_bank": "海晶砂粒囤積盒",
-  "item.coldsblockbank.sea_lantern_bank": "海晶燈囤積盒",
+  "item.coldsblockbank.prismarine_bank": "海磷石囤積盒",
+  "item.coldsblockbank.prismarine_brick_bank": "海磷石磚囤積盒",
+  "item.coldsblockbank.dark_prismarine_bank": "暗海磷石囤積盒",
+  "item.coldsblockbank.prismarine_shard_bank": "海磷碎片囤積盒",
+  "item.coldsblockbank.prismarine_crystal_bank": "海磷晶體囤積盒",
+  "item.coldsblockbank.sea_lantern_bank": "海燈籠囤積盒",
   "item.coldsblockbank.string_bank": "線囤積盒",
   "item.coldsblockbank.sponge_bank": "海綿囤積盒",
   "item.coldsblockbank.basalt_bank": "玄武岩囤積盒",
@@ -75,11 +75,11 @@
   "item.coldsblockbank.brick_bank": "紅磚囤積盒",
   "item.coldsblockbank.clay_ball_bank": "黏土球囤積盒",
   "item.coldsblockbank.cocoa_bean_bank": "可可豆囤積盒",
-  "item.coldsblockbank.crimson_nylium_bank": "緋紅菌岩囤積盒",
+  "item.coldsblockbank.crimson_nylium_bank": "緋紅菌絲石囤積盒",
   "item.coldsblockbank.crying_obsidian_bank": "哭泣的黑曜石囤積盒",
   "item.coldsblockbank.fire_charge_bank": "火焰彈囤積盒",
   "item.coldsblockbank.firework_rocket_bank": "煙花火箭囤積盒",
-  "item.coldsblockbank.ghast_tear_bank": "惡魂之淚囤積盒",
+  "item.coldsblockbank.ghast_tear_bank": "幽靈之淚囤積盒",
   "item.coldsblockbank.glass_bottle_bank": "玻璃瓶囤積盒",
   "item.coldsblockbank.gunpowder_bank": "火藥囤積盒",
   "item.coldsblockbank.heart_of_the_sea_bank": "海洋之心囤積盒",
@@ -89,23 +89,23 @@
   "item.coldsblockbank.lantern_bank": "燈籠囤積盒",
   "item.coldsblockbank.lead_bank": "栓繩囤積盒",
   "item.coldsblockbank.magma_block_bank": "岩漿塊囤積盒",
-  "item.coldsblockbank.magma_cream_bank": "岩漿膏囤積盒",
+  "item.coldsblockbank.magma_cream_bank": "岩漿史萊姆球囤積盒",
   "item.coldsblockbank.name_tag_bank": "命名牌囤積盒",
   "item.coldsblockbank.nautilus_shell_bank": "鸚鵡螺殼囤積盒",
-  "item.coldsblockbank.nether_brick_bank": "下界磚塊囤積盒",
-  "item.coldsblockbank.nether_star_bank": "下界之星囤積盒",
-  "item.coldsblockbank.nether_wart_bank": "下界疣囤積盒",
+  "item.coldsblockbank.nether_brick_bank": "地獄磚囤積盒",
+  "item.coldsblockbank.nether_star_bank": "地獄之星囤積盒",
+  "item.coldsblockbank.nether_wart_bank": "地獄疙瘩囤積盒",
   "item.coldsblockbank.paper_bank": "紙囤積盒",
-  "item.coldsblockbank.phantom_membrane_bank": "幻翼膜囤積盒",
-  "item.coldsblockbank.red_nether_brick_bank": "紅色下界磚塊囤積盒",
-  "item.coldsblockbank.shroomlight_bank": "菌光體囤積盒",
+  "item.coldsblockbank.phantom_membrane_bank": "夜魅皮膜囤積盒",
+  "item.coldsblockbank.red_nether_brick_bank": "紅色地獄磚囤積盒",
+  "item.coldsblockbank.shroomlight_bank": "蕈光體囤積盒",
   "item.coldsblockbank.soul_sand_bank": "靈魂沙囤積盒",
   "item.coldsblockbank.soul_soil_bank": "靈魂土囤積盒",
   "item.coldsblockbank.spider_eye_bank": "蜘蛛眼囤積盒",
   "item.coldsblockbank.sugar_bank": "糖囤積盒",
   "item.coldsblockbank.tnt_bank": "TNT 囤積盒",
   "item.coldsblockbank.tropical_fish_bank": "熱帶魚囤積盒",
-  "item.coldsblockbank.warped_nylium_bank": "詭異菌岩囤積盒",
+  "item.coldsblockbank.warped_nylium_bank": "扭曲菌絲石囤積盒",
   "item.coldsblockbank.wheat_seeds_bank": "小麥種子囤積盒",
   "item.coldsblockbank.obsidian_bank": "黑曜石囤積盒",
   "itemGroup.blockbankTAB": "囤積盒"
