--- a/coldsteel/lang/zh_tw.json
+++ b/coldsteel/lang/zh_tw.json
@@ -6,34 +6,34 @@
   "item.coldsteel.cold_steel_nugget": "冷鋼粒",
   "item.coldsteel.cold_steel_chest": "冷鋼寶箱",
   "item.coldsteel.cold_steel_essence": "冷鋼精萃",
-  "item.coldsteel.cold_steel_diamond": "冷鋼鉆石",
-  "item.coldsteel.cold_steel_diamond_case": "冷鋼鉆石盒",
-  "item.coldsteel.cold_steel_diamond_sword": "冷鋼鉆石劍",
+  "item.coldsteel.cold_steel_diamond": "冷鋼鑽石",
+  "item.coldsteel.cold_steel_diamond_case": "冷鋼鑽石盒",
+  "item.coldsteel.cold_steel_diamond_sword": "冷鋼鑽石劍",
   "item.coldsteel.cold_steel_fitting": "冷鋼槽座",
   "item.coldsteel.cold_xp_bottle": "冰冷經驗瓶",
-  "item.coldsteel.cold_steel_diamond_of_reinforcement": "冷鋼鉆石 - 堅固",
-  "item.coldsteel.cold_steel_diamond_of_strength": "冷鋼鉆石 - 強力",
-  "item.coldsteel.cold_steel_diamond_of_critical_strike": "冷鋼鉆石 - 重擊",
-  "item.coldsteel.cold_steel_diamond_of_counter_attack": "冷鋼鉆石 - 回擊",
-  "item.coldsteel.cold_steel_diamond_of_healing": "冷鋼鉆石 - 療愈",
-  "item.coldsteel.cold_steel_diamond_of_lifestealing": "冷鋼鉆石 - 吸血",
-  "item.coldsteel.cold_steel_diamond_of_nourishment": "冷鋼鉆石 - 榮養",
-  "item.coldsteel.cold_steel_diamond_of_warding": "冷鋼鉆石 - 庇護",
-  "item.coldsteel.cold_steel_diamond_of_momentum": "冷鋼鉆石 - 迸進",
-  "item.coldsteel.cold_steel_diamond_of_venom": "冷鋼鉆石 - 毒液",
-  "item.coldsteel.cold_steel_diamond_of_freezing": "冷鋼鉆石 - 冰凍",
-  "item.coldsteel.cold_steel_diamond_of_firebrand": "冷鋼鉆石 - 火噬",
-  "item.coldsteel.cold_steel_diamond_of_cleaving": "冷鋼鉆石 - 劈砍",
-  "item.coldsteel.cold_steel_diamond_of_gravity": "冷鋼鉆石 - 重力",
-  "item.coldsteel.cold_steel_diamond_of_fireball": "冷鋼鉆石 - 火球",
-  "item.coldsteel.cold_steel_diamond_of_frostball": "冷鋼鉆石 - 冰球",
-  "item.coldsteel.cold_steel_diamond_of_frostfire": "冷鋼鉆石 - 霜焰",
-  "item.coldsteel.cold_steel_diamond_of_enderthrow": "冷鋼鉆石 - 躍遷",
-  "item.coldsteel.cold_steel_diamond_of_butchering": "冷鋼鉆石 - 屠肉",
-  "item.coldsteel.cold_steel_diamond_of_the_thief": "冷鋼鉆石 - 偷竊",
-  "item.coldsteel.cold_steel_diamond_of_the_torchbringer": "冷鋼鉆石 - 火明",
-  "item.coldsteel.cold_steel_diamond_of_the_scavenger": "冷鋼鉆石 - 拾荒",
-  "item.coldsteel.cold_steel_diamond_of_the_escape_artist": "冷鋼鉆石 - 逃生",
+  "item.coldsteel.cold_steel_diamond_of_reinforcement": "冷鋼鑽石 - 堅固",
+  "item.coldsteel.cold_steel_diamond_of_strength": "冷鋼鑽石 - 強力",
+  "item.coldsteel.cold_steel_diamond_of_critical_strike": "冷鋼鑽石 - 重擊",
+  "item.coldsteel.cold_steel_diamond_of_counter_attack": "冷鋼鑽石 - 回擊",
+  "item.coldsteel.cold_steel_diamond_of_healing": "冷鋼鑽石 - 療愈",
+  "item.coldsteel.cold_steel_diamond_of_lifestealing": "冷鋼鑽石 - 吸血",
+  "item.coldsteel.cold_steel_diamond_of_nourishment": "冷鋼鑽石 - 榮養",
+  "item.coldsteel.cold_steel_diamond_of_warding": "冷鋼鑽石 - 庇護",
+  "item.coldsteel.cold_steel_diamond_of_momentum": "冷鋼鑽石 - 迸進",
+  "item.coldsteel.cold_steel_diamond_of_venom": "冷鋼鑽石 - 毒液",
+  "item.coldsteel.cold_steel_diamond_of_freezing": "冷鋼鑽石 - 冰凍",
+  "item.coldsteel.cold_steel_diamond_of_firebrand": "冷鋼鑽石 - 火噬",
+  "item.coldsteel.cold_steel_diamond_of_cleaving": "冷鋼鑽石 - 劈砍",
+  "item.coldsteel.cold_steel_diamond_of_gravity": "冷鋼鑽石 - 重力",
+  "item.coldsteel.cold_steel_diamond_of_fireball": "冷鋼鑽石 - 火球",
+  "item.coldsteel.cold_steel_diamond_of_frostball": "冷鋼鑽石 - 冰球",
+  "item.coldsteel.cold_steel_diamond_of_frostfire": "冷鋼鑽石 - 霜焰",
+  "item.coldsteel.cold_steel_diamond_of_enderthrow": "冷鋼鑽石 - 躍遷",
+  "item.coldsteel.cold_steel_diamond_of_butchering": "冷鋼鑽石 - 屠肉",
+  "item.coldsteel.cold_steel_diamond_of_the_thief": "冷鋼鑽石 - 偷竊",
+  "item.coldsteel.cold_steel_diamond_of_the_torchbringer": "冷鋼鑽石 - 火明",
+  "item.coldsteel.cold_steel_diamond_of_the_scavenger": "冷鋼鑽石 - 拾荒",
+  "item.coldsteel.cold_steel_diamond_of_the_escape_artist": "冷鋼鑽石 - 逃生",
   "item.coldsteel.the_leveler": "均衡匕首",
   "item.coldsteel.grim_frost": "陰冷寒霜",
   "item.coldsteel.natures_bounty": "自然饋贈",
@@ -43,7 +43,7 @@
   "item.coldsteel.pan": "平底鍋",
   "item.coldsteel.short_sword": "短劍",
   "item.coldsteel.heavy_sword": "重劍",
-  "item.coldsteel.stone_great_sword": "巖石大劍",
+  "item.coldsteel.stone_great_sword": "岩石大劍",
   "item.coldsteel.golden_touch": "黃金之觸",
   "item.coldsteel.the_seven_blade": "七字刃",
   "item.coldsteel.thieves_dagger": "竊賊匕首",
@@ -76,10 +76,10 @@
   "item.coldsteel.bladed_staff": "鋒刃法杖",
   "item.coldsteel.arcane_staff": "奧術法杖",
   "item.coldsteel.frost_staff": "冰霜法杖",
-  "item.coldsteel.magma_staff": "巖漿法杖",
+  "item.coldsteel.magma_staff": "岩漿法杖",
   "item.coldsteel.venom_staff": "毒液法杖",
   "item.coldsteel.insanity": "神亂瘋魔",
-  "item.coldsteel.ender_staff": "末影法杖",
+  "item.coldsteel.ender_staff": "終界法杖",
   "item.coldsteel.double_headed_axe": "雙頭斧",
   "item.coldsteel.double_headed_golden_axe": "黃金雙頭斧",
   "item.coldsteel.winters_fury": "凜冬怒火",
@@ -97,7 +97,7 @@
   "item.coldsteel.lifebender_staff": "白無常",
   "item.coldsteel.netherlite_staff": "黑無常",
   "item.coldsteel.rose_blossom": "玫瑰盛放",
-  "item.coldsteel.withered_rose_blossom": "玫瑰雕零",
+  "item.coldsteel.withered_rose_blossom": "玫瑰凋零",
   "item.coldsteel.soul_sliver": "魂銀",
   "item.coldsteel.cudgel_of_the_caged_mind": "破枷困獸",
   "item.coldsteel.wither_skeleton_bone": "雕靈枯骨",
@@ -112,8 +112,8 @@
   "item.coldsteel.scouts_blade": "偵巡利刃",
   "item.coldsteel.dragon_tooth_club": "龍齒大棍",
   "item.coldsteel.living_wood_sword": "活木劍",
-  "item.coldsteel.mighty_carrot": "超能胡蘿卜",
-  "item.coldsteel.mighty_golden_carrot": "超能金胡蘿卜",
+  "item.coldsteel.mighty_carrot": "超能胡蘿蔔",
+  "item.coldsteel.mighty_golden_carrot": "超能金胡蘿蔔",
   "item.coldsteel.dark_pharaoh_scythe": "黑暗法老長鐮",
   "item.coldsteel.light_pharaoh_scythe": "光明法老長鐮",
   "item.coldsteel.spawn_camper": "守屍者",
@@ -125,13 +125,13 @@
   "item.coldsteel.stone_trident": "石三叉戟",
   "item.coldsteel.iron_trident": "鐵三叉戟",
   "item.coldsteel.golden_trident": "金三叉戟",
-  "item.coldsteel.diamond_trident": "鉆石三叉戟",
-  "item.coldsteel.netherite_trident": "下界合金三叉戟",
+  "item.coldsteel.diamond_trident": "鑽石三叉戟",
+  "item.coldsteel.netherite_trident": "獄髓三叉戟",
   "item.coldsteel.emerald_trident": "綠寶石三叉戟",
   "item.coldsteel.redstone_trident": "紅石三叉戟",
   "item.coldsteel.lapis_lazuli_trident": "青金石三叉戟",
   "item.coldsteel.obsidian_trident": "黑曜石三叉戟",
-  "item.coldsteel.slime_trident": "黏液三叉戟",
+  "item.coldsteel.slime_trident": "史萊姆三叉戟",
   "item.coldsteel.nova_trident": "新星三叉戟",
   "item.coldsteel.spectral_trident": "幽冥三叉戟",
   "item.coldsteel.emperers_blade": "帝皇刃",
