--- a/coldsteel/lang/zh_tw.json
+++ b/coldsteel/lang/zh_tw.json
@@ -15,7 +15,7 @@
   "item.coldsteel.cold_steel_diamond_of_strength": "冷鋼鑽石 - 強力",
   "item.coldsteel.cold_steel_diamond_of_critical_strike": "冷鋼鑽石 - 重擊",
   "item.coldsteel.cold_steel_diamond_of_counter_attack": "冷鋼鑽石 - 回擊",
-  "item.coldsteel.cold_steel_diamond_of_healing": "冷鋼鑽石 - 療愈",
+  "item.coldsteel.cold_steel_diamond_of_healing": "冷鋼鑽石 - 療癒",
   "item.coldsteel.cold_steel_diamond_of_lifestealing": "冷鋼鑽石 - 吸血",
   "item.coldsteel.cold_steel_diamond_of_nourishment": "冷鋼鑽石 - 榮養",
   "item.coldsteel.cold_steel_diamond_of_warding": "冷鋼鑽石 - 庇護",
