--- a/coldstrader/lang/zh_tw.json
+++ b/coldstrader/lang/zh_tw.json
@@ -1,16 +1,16 @@
 {
   "item.coldstrader.wandering_traders_staff": "流浪商人法杖",
   "item.coldstrader.traders_mirror": "商人的鏡子",
-  "item.coldstrader.traders_end_mirror": "商人的末地之鏡",
+  "item.coldstrader.traders_end_mirror": "商人的終界之鏡",
   "item.coldstrader.trader_whistle": "商人口哨",
-  "item.coldstrader.traders_jerky": "商人的珍藏肉幹",
+  "item.coldstrader.traders_jerky": "商人的珍藏肉乾",
   "item.coldstrader.hero_charm": "英雄勳符",
   "item.coldstrader.mystery_book": "神秘精裝書",
   "item.coldstrader.spicy_wheat": "熱辣小麥",
   "item.coldstrader.traders_sword": "流浪商人的劍",
   "item.coldstrader.traders_pickaxe": "流浪商人的鎬",
   "item.coldstrader.traders_axe": "流浪商人的斧",
-  "item.coldstrader.traders_shovel": "流浪商人的鍬",
+  "item.coldstrader.traders_shovel": "流浪商人的鏟",
   "item.coldstrader.traders_hoe": "流浪商人的鋤",
   "item.coldstrader.traders_helmet": "流浪商人的頭盔",
   "item.coldstrader.traders_chestplate": "流浪商人的胸甲",
