--- a/colwater/lang/zh_tw.json
+++ b/colwater/lang/zh_tw.json
@@ -5,9 +5,9 @@
   "item.colwater.dyable_water_bucket": "可染色水桶",
   "item.colwater.gray_bucket": "灰色水桶",
   "item.colwater.green_bucket": "綠色水桶",
-  "item.colwater.light_blue_bucket": "淡藍色水桶",
-  "item.colwater.lime_bucket": "黃綠色水桶",
-  "item.colwater.magenta_bucket": "品紅色水桶",
+  "item.colwater.light_blue_bucket": "淺藍色水桶",
+  "item.colwater.lime_bucket": "淺綠色水桶",
+  "item.colwater.magenta_bucket": "洋紅色水桶",
   "item.colwater.orange_bucket": "橙色水桶",
   "item.colwater.pink_bucket": "粉紅色水桶",
   "item.colwater.purple_bucket": "紫色水桶",
@@ -20,8 +20,8 @@
   "item.colwater.glow_gray_bucket": "發光灰色水桶",
   "item.colwater.glow_green_bucket": "發光綠色水桶",
   "item.colwater.glow_light_blue_bucket": "發光淡藍色水桶",
-  "item.colwater.glow_lime_bucket": "發光黃綠色水桶",
-  "item.colwater.glow_magenta_bucket": "發光品紅色水桶",
+  "item.colwater.glow_lime_bucket": "發光淺綠色水桶",
+  "item.colwater.glow_magenta_bucket": "發光洋紅色水桶",
   "item.colwater.glow_orange_bucket": "發光橙色水桶",
   "item.colwater.glow_pink_bucket": "發光粉紅色水桶",
   "item.colwater.glow_purple_bucket": "發光紫色水桶",
