--- a/comfortable_nether/lang/zh_tw.json
+++ b/comfortable_nether/lang/zh_tw.json
@@ -1,17 +1,17 @@
 {
   "block.comfortable_nether.abandoned_wreckage": "廢棄殘骸",
-  "block.comfortable_nether.ancient_nether_slab": "遠古下界巖磚台階",
-  "block.comfortable_nether.ancient_nether_stairs": "遠古下界巖磚樓梯",
-  "block.comfortable_nether.ancient_nether_wall": "遠古下界巖磚墻",
-  "block.comfortable_nether.ancient_netherrack": "遠古下界巖",
-  "block.comfortable_nether.ancient_netherrack_bricks": "遠古下界巖磚",
-  "block.comfortable_nether.ancient_netherrack_slab": "遠古下界巖台階",
-  "block.comfortable_nether.ancient_netherrack_stairs": "遠古下界巖樓梯",
-  "block.comfortable_nether.ancient_netherrack_wall": "遠古下界巖墻",
+  "block.comfortable_nether.ancient_nether_slab": "遠古地獄岩磚半磚",
+  "block.comfortable_nether.ancient_nether_stairs": "遠古地獄岩磚樓梯",
+  "block.comfortable_nether.ancient_nether_wall": "遠古地獄岩磚牆",
+  "block.comfortable_nether.ancient_netherrack": "遠古地獄岩",
+  "block.comfortable_nether.ancient_netherrack_bricks": "遠古地獄岩磚",
+  "block.comfortable_nether.ancient_netherrack_slab": "遠古地獄岩半磚",
+  "block.comfortable_nether.ancient_netherrack_stairs": "遠古地獄岩樓梯",
+  "block.comfortable_nether.ancient_netherrack_wall": "遠古地獄岩牆",
   "block.comfortable_nether.blended_barrel": "迷彩桶",
-  "block.comfortable_nether.chiseled_ancient_netherrack": "鏨制遠古下界巖磚",
-  "block.comfortable_nether.chiseled_polished_somberstone_bricks": "鏨制光滑肅穆石",
-  "block.comfortable_nether.chiseled_polished_somberstone_bricks_2": "鏨制光滑肅穆石磚",
+  "block.comfortable_nether.chiseled_ancient_netherrack": "浮雕遠古地獄岩磚",
+  "block.comfortable_nether.chiseled_polished_somberstone_bricks": "浮雕光滑肅穆石",
+  "block.comfortable_nether.chiseled_polished_somberstone_bricks_2": "浮雕光滑肅穆石磚",
   "block.comfortable_nether.crimson_bulbling": "緋紅燈草",
   "block.comfortable_nether.crystalline_carbon": "結晶碳",
   "block.comfortable_nether.dustsprout_plant": "塵芽植株",
@@ -23,35 +23,35 @@
   "block.comfortable_nether.fume_puffer_2": "鼓煙莖",
   "block.comfortable_nether.golden_warped_fungus": "金色詭異菌",
   "block.comfortable_nether.grimstem": "幽滴木",
-  "block.comfortable_nether.iron_rich_basalt": "富鐵玄武巖",
-  "block.comfortable_nether.lava_lamp": "熔巖燈",
-  "block.comfortable_nether.netherite_heart": "下界合金核心",
-  "block.comfortable_nether.piled_residue": "殘余物堆",
+  "block.comfortable_nether.iron_rich_basalt": "富鐵玄武岩",
+  "block.comfortable_nether.lava_lamp": "熔岩燈",
+  "block.comfortable_nether.netherite_heart": "獄髓核心",
+  "block.comfortable_nether.piled_residue": "殘餘物堆",
   "block.comfortable_nether.polished_somberstone": "平滑肅穆石",
   "block.comfortable_nether.polished_somberstone_bricks": "平滑肅穆石磚",
-  "block.comfortable_nether.polished_somberstone_bricks_slab": "平滑肅穆石磚台階",
+  "block.comfortable_nether.polished_somberstone_bricks_slab": "平滑肅穆石磚半磚",
   "block.comfortable_nether.polished_somberstone_bricks_stairs": "平滑肅穆石磚樓梯",
-  "block.comfortable_nether.polished_somberstone_bricks_wall": "平滑肅穆石磚墻",
-  "block.comfortable_nether.polished_somberstone_slab": "平滑肅穆石台階",
+  "block.comfortable_nether.polished_somberstone_bricks_wall": "平滑肅穆石磚牆",
+  "block.comfortable_nether.polished_somberstone_slab": "平滑肅穆石半磚",
   "block.comfortable_nether.polished_somberstone_stairs": "平滑肅穆石樓梯",
-  "block.comfortable_nether.polished_somberstone_wall": "平滑肅穆石墻",
-  "block.comfortable_nether.scorched_netherrack": "燒焦下界巖",
+  "block.comfortable_nether.polished_somberstone_wall": "平滑肅穆石牆",
+  "block.comfortable_nether.scorched_netherrack": "燒焦地獄岩",
   "block.comfortable_nether.suspicious_soul_sand": "可疑的靈魂沙",
   "block.comfortable_nether.tangleweed": "纏亂草",
   "block.comfortable_nether.wallcreep": "攀壁藤",
   "block.comfortable_nether.weeping_liana": "哭泣藤",
   "block.comfortable_nether.weeping_liana_seeds": "哭泣藤種子",
-  "block.comfortable_nether.withered_remains": "雕零殘余",
+  "block.comfortable_nether.withered_remains": "凋零殘餘",
   "effect.mogul_acknowledgement": "頭領的認可",
   "effect.passion_effect": "激情",
   "effect.suffocation": "窒息",
   "entity.comfortable_nether.disturbed": "躁魂",
   "entity.comfortable_nether.fuligan": "煤球菌獸",
-  "entity.comfortable_nether.lava_baleen": "熔巖鯨濾獸",
-  "entity.comfortable_nether.loyal_netherite_golem": "下界合金傀儡",
+  "entity.comfortable_nether.lava_baleen": "熔岩鯨濾獸",
+  "entity.comfortable_nether.loyal_netherite_golem": "獄髓傀儡",
   "entity.comfortable_nether.lubberkin": "緋紅鬼嬰",
-  "entity.comfortable_nether.netherite_golem": "下界合金傀儡",
-  "entity.comfortable_nether.nyliun": "菌巖精靈",
+  "entity.comfortable_nether.netherite_golem": "獄髓傀儡",
+  "entity.comfortable_nether.nyliun": "菌岩精靈",
   "entity.comfortable_nether.pummeler": "重擊蟹",
   "entity.comfortable_nether.saurian": "皇家蜥蜴",
   "entity.comfortable_nether.saurian_hostile": "皇家蜥蜴",
@@ -59,27 +59,27 @@
   "entity.comfortable_nether.the_insatiable": "貪噬者",
   "item.comfortable_nether.abscess_danish": "膿果酥皮餅",
   "item.comfortable_nether.axe_of_rectitude": "公正戰斧",
-  "item.comfortable_nether.baleen_filter": "鯨濾獸濾食須",
+  "item.comfortable_nether.baleen_filter": "鯨濾獸濾食鬚",
   "item.comfortable_nether.baleen_pouch": "§4鯨濾獸氣袋",
   "item.comfortable_nether.brady_cline_brave_new_world": "音樂唱片",
   "item.comfortable_nether.brady_cline_brave_new_world.desc": "Brady Cline - Brave New World",
   "item.comfortable_nether.brady_cline_piglin_brutality": "音樂唱片",
   "item.comfortable_nether.brady_cline_piglin_brutality.desc": "Brady Cline - Piglin Brutality",
-  "item.comfortable_nether.compacted_nether_roots": "壓縮下界根",
+  "item.comfortable_nether.compacted_nether_roots": "壓縮地獄根",
   "item.comfortable_nether.crimson_rotten_wrap": "緋紅腐肉卷",
   "item.comfortable_nether.crystal_bullet": "結晶子彈",
   "item.comfortable_nether.crystalline_carbon_item": "結晶碳物品",
   "item.comfortable_nether.crystalline_saber": "§4魂火佩劍",
   "item.comfortable_nether.curioof_passion": "§4激情飾品",
   "item.comfortable_nether.disturbed_in_a_bottle": "瓶中躁魂",
-  "item.comfortable_nether.disturbed_spawn_egg": "躁魂刷怪蛋",
+  "item.comfortable_nether.disturbed_spawn_egg": "躁魂生怪蛋",
   "item.comfortable_nether.docile_soul": "自由靈魂",
   "item.comfortable_nether.dried_crimson_roots": "幹燥緋紅根",
   "item.comfortable_nether.dried_warped_roots": "幹燥詭異根",
   "item.comfortable_nether.dustsprout": "塵芽",
   "item.comfortable_nether.dustsprout_pie": "塵芽派",
   "item.comfortable_nether.flaming_abscess": "火焰膿果",
-  "item.comfortable_nether.fuligan_spawn_egg": "煤絨菌獸刷怪蛋",
+  "item.comfortable_nether.fuligan_spawn_egg": "煤絨菌獸生怪蛋",
   "item.comfortable_nether.fuligo": "煤絨菌",
   "item.comfortable_nether.fungus_bomb": "§4菌類炸彈",
   "item.comfortable_nether.golden_snout_boots": "金豬鼻靴",
@@ -87,38 +87,38 @@
   "item.comfortable_nether.golden_snout_helmet": "金豬鼻",
   "item.comfortable_nether.golden_snout_leggings": "金豬鼻護腿",
   "item.comfortable_nether.grimstem_item": "幽滴棍",
-  "item.comfortable_nether.heartof_the_nether": "下界之心",
+  "item.comfortable_nether.heartof_the_nether": "地獄之心",
   "item.comfortable_nether.insatiable_blubber": "貪欲脂",
-  "item.comfortable_nether.lava_baleen_spawn_egg": "熔巖鯨濾獸刷怪蛋",
+  "item.comfortable_nether.lava_baleen_spawn_egg": "熔岩鯨濾獸生怪蛋",
   "item.comfortable_nether.liquid_grimdrop": "幽滴液",
-  "item.comfortable_nether.loyal_netherite_golem_spawn_egg": "下界合金傀儡刷怪蛋",
+  "item.comfortable_nether.loyal_netherite_golem_spawn_egg": "獄髓傀儡生怪蛋",
   "item.comfortable_nether.lubberkin_in_a_bottle": "瓶中緋紅鬼嬰",
-  "item.comfortable_nether.lubberkin_spawn_egg": "緋紅鬼嬰刷怪蛋",
+  "item.comfortable_nether.lubberkin_spawn_egg": "緋紅鬼嬰生怪蛋",
   "item.comfortable_nether.meat_pie": "肉派",
-  "item.comfortable_nether.netherite_golem_spawn_egg": "下界合金傀儡刷怪蛋",
+  "item.comfortable_nether.netherite_golem_spawn_egg": "獄髓傀儡生怪蛋",
   "item.comfortable_nether.null_rod": "§4空無之杖",
-  "item.comfortable_nether.nyliun_spawn_egg": "菌巖精靈刷怪蛋",
+  "item.comfortable_nether.nyliun_spawn_egg": "菌岩精靈生怪蛋",
   "item.comfortable_nether.padded_leather_boots_boots": "軟墊皮靴",
   "item.comfortable_nether.padded_leather_boots_chestplate": "軟墊皮裹甲",
   "item.comfortable_nether.padded_leather_boots_helmet": "軟墊皮靴頭盔",
   "item.comfortable_nether.padded_leather_boots_leggings": "軟墊皮靴護腿",
-  "item.comfortable_nether.popped_pummeler_remnant": "爆裂重擊蟹殘余",
+  "item.comfortable_nether.popped_pummeler_remnant": "爆裂重擊蟹殘餘",
   "item.comfortable_nether.pummeler_club": "§4重擊蟹大棒",
-  "item.comfortable_nether.pummeler_remnant": "重擊蟹殘余",
-  "item.comfortable_nether.pummeler_spawn_egg": "重擊蟹刷怪蛋",
+  "item.comfortable_nether.pummeler_remnant": "重擊蟹殘餘",
+  "item.comfortable_nether.pummeler_spawn_egg": "重擊蟹生怪蛋",
   "item.comfortable_nether.quartz_bottle": "石英瓶",
-  "item.comfortable_nether.remnant_stew": "殘余燉",
+  "item.comfortable_nether.remnant_stew": "殘餘燉",
   "item.comfortable_nether.root_scramble": "根莖沙拉",
-  "item.comfortable_nether.saurian_hostile_spawn_egg": "皇家蜥蜴刷怪蛋",
-  "item.comfortable_nether.saurian_spawn_egg": "皇家蜥蜴刷怪蛋",
+  "item.comfortable_nether.saurian_hostile_spawn_egg": "皇家蜥蜴生怪蛋",
+  "item.comfortable_nether.saurian_spawn_egg": "皇家蜥蜴生怪蛋",
   "item.comfortable_nether.soul_in_a_bottle": "瓶中靈魂",
-  "item.comfortable_nether.soul_spawn_egg": "靈魂刷怪蛋",
+  "item.comfortable_nether.soul_spawn_egg": "靈魂生怪蛋",
   "item.comfortable_nether.spectral_lantern": "§4鬼靈燈",
   "item.comfortable_nether.spirit_soup": "靈魂湯",
   "item.comfortable_nether.strange_concoction": "奇異儀器",
   "item.comfortable_nether.strider_milk": "熾足獸奶",
   "item.comfortable_nether.stuffed_filter": "填餡濾食須",
-  "item.comfortable_nether.the_insatiable_spawn_egg": "貪噬者刷怪蛋",
+  "item.comfortable_nether.the_insatiable_spawn_egg": "貪噬者生怪蛋",
   "item.comfortable_nether.twocxk_fungi_feet": "音樂唱片",
   "item.comfortable_nether.twocxk_fungi_feet.desc": "Twockx - Fungi Feet",
   "item.comfortable_nether.urn_of_inverse": "逆轉之壺",
@@ -142,12 +142,12 @@
   "item.minecraft.tipped_arrow.effect.mogul_acknowledgement": "頭領的認可之箭",
   "item.minecraft.tipped_arrow.effect.passion_effect": "激情之箭",
   "item.minecraft.tipped_arrow.effect.suffocation": "窒息之箭",
-  "itemGroup.tabcomfortable_nether_blocks": "恣適下界丨方塊",
-  "itemGroup.tabcomfortable_nether_cooldown_tools": "恣適下界丨工具",
-  "itemGroup.tabcomfortable_nether_food": "恣適下界丨食物",
-  "itemGroup.tabcomfortable_nether_misc": "恣適下界丨雜項",
-  "itemGroup.tabcomfortable_nether_tools": "恣適下界丨工具",
-  "itemGroup.tabcomfortable_nether_urns": "恣適下界丨工具",
+  "itemGroup.tabcomfortable_nether_blocks": "恣適地獄丨方塊",
+  "itemGroup.tabcomfortable_nether_cooldown_tools": "恣適地獄丨工具",
+  "itemGroup.tabcomfortable_nether_food": "恣適地獄丨食物",
+  "itemGroup.tabcomfortable_nether_misc": "恣適地獄丨雜項",
+  "itemGroup.tabcomfortable_nether_tools": "恣適地獄丨工具",
+  "itemGroup.tabcomfortable_nether_urns": "恣適地獄丨工具",
   "subtitles.baleenair": "",
   "subtitles.baleendeath": "",
   "subtitles.baleenhurt": "",
