--- a/comforts/lang/zh_tw.json
+++ b/comforts/lang/zh_tw.json
@@ -23,8 +23,8 @@
   "block.comforts.sleeping_bag_olive": "橄欖黃色睡袋",
   "block.comforts.hammock_rose": "玫紅色吊床布",
   "block.comforts.sleeping_bag_rose": "玫紅色睡袋",
-  "block.comforts.hammock_slate": "巖藍色吊床布",
-  "block.comforts.sleeping_bag_slate": "巖藍色睡袋",
+  "block.comforts.hammock_slate": "岩藍色吊床布",
+  "block.comforts.sleeping_bag_slate": "岩藍色睡袋",
   "block.comforts.hammock_tan": "淡棕色吊床布",
   "block.comforts.sleeping_bag_tan": "淡棕色睡袋",
   "block.comforts.hammock_teal": "鴨綠色吊床布",
