--- a/compactmachines/lang/zh_tw.json
+++ b/compactmachines/lang/zh_tw.json
@@ -32,14 +32,14 @@
   "block.compactmachines.tunnel_wall": "緊實型壓縮空間壁（帶接口）",
   "block.compactmachines.wall": "壓縮空間壁",
   "command.compactmachines.cannot_give_machine_item": "給予玩家新壓縮空間機械失敗。",
-  "command.compactmachines.failed_command_file_error": "執行指令失敗；出現文件錯誤。請檢查日志。",
+  "command.compactmachines.failed_command_file_error": "執行指令失敗；出現文件錯誤。請檢查日誌。",
   "command.compactmachines.level_not_found": "無法找到壓縮空間機械維度。",
   "command.compactmachines.level_registered": "已找到壓縮空間機械維度。",
   "command.compactmachines.machine_given_successfully": "新壓縮空間機械物品已創建並給予至%s。",
   "command.compactmachines.machine_not_bound": "位於%s的壓縮空間機械未與空間綁定。",
   "command.compactmachines.not_in_compact_dim": "無法在壓縮空間機械空間外部使用該治療。",
   "command.compactmachines.room_not_found": "無法找到空間[%s]。",
-  "command.compactmachines.room_reg_count": "未注冊的空間數量：%s",
+  "command.compactmachines.room_reg_count": "未註冊的空間數量：%s",
   "command.compactmachines.spawn_changed_successfully": "已成功更改空間[%s]的出生點。",
   "command.compactmachines.summary.machines.dimension": "[%s]：%s",
   "command.compactmachines.summary.machines.total": "總計：%s",
