--- a/compactvoidminers/lang/zh_tw.json
+++ b/compactvoidminers/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
-  "itemGroup.tabCompactVoidMiners": "緊湊型虛空采礦機",
-  "block.compactvoidminers.void_miner": "緊湊型虛空采礦機",
+  "itemGroup.tabCompactVoidMiners": "緊湊型虛空採礦機",
+  "block.compactvoidminers.void_miner": "緊湊型虛空採礦機",
   "block.compactvoidminers.void_pump": "緊湊型虛空泵",
   "item.compactvoidminers.blank_filter": "空白標簽過濾器",
   "item.compactvoidminers.tag_filter.-1": "未知標簽過濾器",
@@ -21,9 +21,9 @@
   "item.compactvoidminers.tag_filter_dust": "標簽過濾器：粉末",
   "item.compactvoidminers.tag_filter_stone": "標簽過濾器：石材",
   "gui.compactvoidminers.missing_filter_upgrade": "缺少過濾升級",
-  "container.compactvoidminers.void_miner": "緊湊型虛空采礦機",
+  "container.compactvoidminers.void_miner": "緊湊型虛空採礦機",
   "container.compactvoidminers.void_pump": "緊湊型虛空泵",
-  "command.compactvoidminers.refreshedcache": "緊湊型虛空采礦機緩存已刷新",
+  "command.compactvoidminers.refreshedcache": "緊湊型虛空採礦機緩存已刷新",
   "command.compactvoidminers.info.noitem": "未選中任何物品",
   "command.compactvoidminers.info.none": "無",
   "command.compactvoidminers.info.item": "物品",
